--- a/.project
+++ b/.project
@@ -27,6 +27,11 @@
 			<location>C:/Users/Iveta/Desktop/Hi-ReS-Stats-master/src</location>
 		</link>
 		<link>
+			<name>[source path] starling</name>
+			<type>2</type>
+			<location>C:/Users/Iveta/Downloads/starling-2.1/starling/src/starling</location>
+		</link>
+		<link>
 			<name>[source path] starling-src</name>
 			<type>2</type>
 			<location>C:/Users/Iveta/Desktop/Gamua-Starling-Framework-110c2a5/starling/src</location>
