--- a/.project
+++ b/.project
@@ -32,6 +32,11 @@
 			<location>C:/Users/Iveta/Downloads/as3corelib-master/as3corelib-master/src/com/adobe/serialization/json</location>
 		</link>
 		<link>
+			<name>[source path] libs</name>
+			<type>2</type>
+			<location>C:/Program Files/Adobe/Adobe Flash CC 2015/Common/Configuration/ActionScript 3.0/flex_sdk/4.5.0/frameworks/libs</location>
+		</link>
+		<link>
 			<name>[source path] starling</name>
 			<type>2</type>
 			<location>C:/Users/Iveta/Downloads/starling-2.1/starling/src/starling</location>
